# Figures---design-patterns-hw

src/: CLI.cpp  CLI.h  CMakeLists.txt  application.cpp  doubleEQ.cpp  doubleEQ.h  figures.txt  test.txt
src/figures/: Circle.cpp  Circle.h  Figure.h  FigureFactory.cpp  FigureFactory.h  FigureFactoryFactory.cpp  FigureFactoryFactory.h  FileStreamFigureFactory.cpp  FileStreamFigureFactory.h  RandomFigureFactory.cpp  RandomFigureFactory.h  Rectangle.cpp  Rectangle.h  StreamFigureFactory.cpp  StreamFigureFactory.h  Triangle.cpp  Triangle.h
test/: test-library.cpp
